# threshly

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  VIEWS.md  pyproject.toml
deploy/: README.md  docker-compose.yml  prometheus.yml
deploy/grafana/dashboards/: threshly.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasource.yml
examples/: demo.sh  gen_sample.py  sample.jsonl
src/threshly/: __init__.py  cli.py  config.py  db.py  ids.py  metrics.py  models.py  schemas.py  store.py
src/threshly/coordinator/: app.py  queue.py  scheduling.py
src/threshly/worker/: runner.py
src/threshly/worker/engines/: __init__.py  base.py  mock.py  vllm.py
tests/: conftest.py  test_e2e.py  test_preemption.py  test_queue.py  test_scheduling.py
