[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threshly"
version = "0.1.0"
description = "Self-hosted, OpenAI-Batch-compatible batch inference engine for spot/preemptible GPUs, built on vLLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Christopher King" }]
keywords = ["llm", "inference", "vllm", "batch", "spot", "gpu", "openai", "batch-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "prometheus-client>=0.20",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
vllm = ["vllm>=0.5.0"]
s3 = ["boto3>=1.34"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
threshly = "threshly.cli:app"

[project.urls]
Homepage = "https://github.com/cxk280/threshly"
Repository = "https://github.com/cxk280/threshly"

[tool.hatch.build.targets.wheel]
packages = ["src/threshly"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented pattern uses function calls (Argument/Option) as parameter defaults.
"src/threshly/cli.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
